--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Source+Code+Pro&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <body>
+    <div class="w3-bar w3-black" id="navbar">
+      <a href="#" class="w3-bar-item w3-button w3-hover-amber">Home</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-aqua">About me</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-blue">Skills and Education</a>
+      <a href="#bottom" class="w3-bar-item w3-button w3-hover-yellow">Contact</a>
+    </div>
     <header class="bgimg w3-display-container" id="home">
       <div class="w3-display-middle w3-center">
         <span class="header-cover" style="font-size: 70px"
@@ -81,7 +87,7 @@
     <a href="./thankYou.html"><p><button class="w3-button w3-black" type="submit">SEND</button></p></a>
     </div>
     
-    <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
+    <footer class="w3-center w3-light-grey w3-padding-48 w3-large" id="bottom">
       <p>Made by Yogesh Prakash</p>
       <h3>Contact me:</h3> <a href="https://www.linkedin.com/in/yogesh-prakash-459958188/"><img src="./icons/linkedin.png"></a>
         <a href="https://github.com/yogeshprakash99"><img src="./icons/github.png"></a>
