--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Source+Code+Pro&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <body>
-    <div class="w3-bar w3-black" id="navbar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-amber">Home</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-aqua">About me</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-blue">Skills and Education</a>
-      <a href="#bottom" class="w3-bar-item w3-button w3-hover-yellow">Contact</a>
+    <div class="w3-top">
+      <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+        <a href="#home" class="w3-bar-item w3-button">Yogesh Prakash</a>
+        <div class="w3-right w3-hide-small">
+          <a href="#about" class="w3-bar-item w3-button">About</a>
+          <a href="#skill-container" class="w3-bar-item w3-button">Skills</a>
+          <a href="#bottom" class="w3-bar-item w3-button">Contact</a>
+        </div>
+      </div>
     </div>
     <header class="bgimg w3-display-container" id="home">
       <div class="w3-display-middle w3-center">
@@ -57,9 +61,10 @@
                 <li>Git and GitHub</li>
             </ol>
           </div>
-          <div class="w3-panel w3-leftbar w3-light-grey" id="edu-container">
             <p>
-              <i> Education </i>
+              <h5 class="w3-center w3-padding-32">
+                <span class="w3-tag w3-wide">EDUCATION</span>
+              </h5>
             </p>
             <table>
               <tr>
@@ -78,8 +83,7 @@
                 <td>2006 to 2017</td>
                 </tr>
             </table>
-          </div>
-    <div class="w3-center w3-padding-32">
+    <div class="w3-center w3-padding-64">
         <span class="w3-tag w3-wide">REACH OUT TO ME</span>
     <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
     <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email Address" required name="Name"></p>
